Fixed bug #75420 (Crash when modifing property name in __isset for BP_VAR_IS)